; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_splevel.c_UI_SPLevelMenu_LevelEvent.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_splevel.c_UI_SPLevelMenu_LevelEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i64 }

@QM_ACTIVATED = common dso_local global i32 0, align 4
@selectedArenaSet = common dso_local global i32 0, align 4
@trainingTier = common dso_local global i32 0, align 4
@finalTier = common dso_local global i32 0, align 4
@ID_PICTURE0 = common dso_local global i64 0, align 8
@selectedArena = common dso_local global i64 0, align 8
@ARENAS_PER_TIER = common dso_local global i32 0, align 4
@levelMenuInfo = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@.str = private unnamed_addr constant [15 x i8] c"ui_spSelection\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @UI_SPLevelMenu_LevelEvent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UI_SPLevelMenu_LevelEvent(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @QM_ACTIVATED, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %40

9:                                                ; preds = %2
  %10 = load i32, i32* @selectedArenaSet, align 4
  %11 = load i32, i32* @trainingTier, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* @selectedArenaSet, align 4
  %15 = load i32, i32* @finalTier, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %9
  br label %40

18:                                               ; preds = %13
  %19 = load i8*, i8** %3, align 8
  %20 = bitcast i8* %19 to %struct.TYPE_3__*
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @ID_PICTURE0, align 8
  %24 = sub nsw i64 %22, %23
  store i64 %24, i64* @selectedArena, align 8
  %25 = load i32, i32* @selectedArenaSet, align 4
  %26 = load i32, i32* @ARENAS_PER_TIER, align 4
  %27 = mul nsw i32 %25, %26
  %28 = sext i32 %27 to i64
  %29 = load i64, i64* @selectedArena, align 8
  %30 = add nsw i64 %28, %29
  %31 = call i32 @UI_GetArenaInfoByNumber(i64 %30)
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @levelMenuInfo, i32 0, i32 0), align 4
  %32 = call i32 (...) @UI_SPLevelMenu_SetBots()
  %33 = load i32, i32* @selectedArenaSet, align 4
  %34 = load i32, i32* @ARENAS_PER_TIER, align 4
  %35 = mul nsw i32 %33, %34
  %36 = sext i32 %35 to i64
  %37 = load i64, i64* @selectedArena, align 8
  %38 = add nsw i64 %36, %37
  %39 = call i32 @trap_Cvar_SetValue(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %38)
  br label %40

40:                                               ; preds = %18, %17, %8
  ret void
}

declare dso_local i32 @UI_GetArenaInfoByNumber(i64) #1

declare dso_local i32 @UI_SPLevelMenu_SetBots(...) #1

declare dso_local i32 @trap_Cvar_SetValue(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
